--- a/default.css
+++ b/default.css
@@ -22,3 +22,14 @@ a.navbar-item {
     margin-top: 1em;
     margin-bottom: 1em;
 }
+
+
+#content h1 {
+    font-size: 1.6em;
+}
+#content h2 {
+    font-size: 1.4em;
+}
+#content h3 {
+    font-size: 1.2em;
+}
