--- a/default.css
+++ b/default.css
@@ -20,14 +20,17 @@ a.navbar-item {
 
 #nav {
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 10px;
 }
 
+#nav .navbar-brand a {
+    font-size: 2em;
+}
 
 #content h1 {
-    font-size: 1.6em;
+    font-size: 2em;
 }
-#content h2 {
+#content h2 a {
     font-size: 1.4em;
 }
 #content h3 {
